--- a/blog/2021-10-18-test.md
+++ b/blog/2021-10-18-test.md
@@ -1,21 +1,23 @@
 ---
-title: test
+title: Valorant
 path: /test
 date: 2021-10-18
-summary: Archived Post Example - Just add is_archived true to your markdown post.
-tags: ['archived']
-categories: ['archived']
-thumbnail: ./archived.png
-is_archived: true
+summary: เกมยิงปืนในรูปแบบ 5v5 ที่ขับเคลื่อนโดยเหล่าเอเจนท์ผู้มากความสามารถ
+tags: ['Valorant']
+categories: ['Valorant']
+thumbnail: ./valorant.jpg
+# is_archived: true
 sidebar: Alternative
 ---
 
-## How to Archive Post
-To archive a post add `is_archived: true` to your markdown post. This will add div block
-on top of the archived post with title and text. To change the default archive title and text add following
-key to the .env file
+## พวกเราคือ VALORANT
+`ก้าวข้ามทุกขีดจำกัด`
+ผสมผสานสไตล์และประสบการณ์ของคุณบนเวทีการแข่งขันระดับโลก คุณมีโอกาสในการเล่น 13 รอบเพื่อโจมตีและป้องกันทีมของคุณด้วยการยิงที่เฉียบคมและความสามารถทางยุทธวิธี และคุณจะต้องตัดสินใจให้เร็วกว่าคู่ต่อสู้หากคุณต้องการเอาชีวิตรอดด้วยชีวิตเดียวที่มีอยู่ สังหารศัตรูในโหมดแข่งขันและโหมดไม่จัดอันดับ เช่นเดียวกันกับโหมด `Deathmatch` และ `Spike Rush`
 
-```dotenv
-ARCHIVE_TITLE='ARCHIVED POST'
-ARCHIVE_TEXT='This Post is outdated.'
-```
+## เอเจนท์ของคุณ
+`ความคิดสร้างสรรค์คืออาวุธที่แข็งแกร่งที่สุดของคุณ`
+เกมนี้ไม่ได้มีเพียงแค่ปืนหรือกระสุน คุณจะได้เลือกเอเจนท์ที่มาพร้อมอาวุธและความสามารถที่ยืดหยุ่น รวดเร็ว และรุนแรง ซึ่งความสามารถเหล่านี้จะช่วยฉายแสงให้ทักษะการยิงปืนของคุณเปล่งประกายยิ่งขึ้น ไม่มีเอเจนท์ไหนที่มีสไตล์การเล่นที่เหมือนกัน เช่นเดียวกับการที่ไม่มีไฮไลท์ใดที่เหมือนกัน
+
+## แผนที่ของคุณ
+`ต่อสู้รอบโลก`
+แผนที่แต่ละอันคือพื้นที่จัดแสดงความคิดสร้างสรรค์ของคุณ แผนการของทีมที่มีจุดมุ่งหมาย การเล่นที่น่าตื่นเต้น และช่วงเวลาที่น่ากังวล เล่นให้เป็นตำนานจนคนอื่นต้องตามรอย
